--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "main.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=dev nodemon main"
+    "dev": "nodemon main"
   },
   "keywords": [],
   "author": "",
@@ -15,10 +15,10 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "config": "^3.3.12",
-    "cookie-parser": "^1.4.7",
     "cross-env": "^7.0.3",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-handlebars": "^8.0.2",
     "express-winston": "^4.2.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
